# neurotech-challenge

./: .env.template  README.md  docker-compose.yml
backend/: .dockerignore  .env.template  Dockerfile  entrypoint.sh  pyproject.toml
backend/api/: models.py  serializers.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_currenciesmodel_rates.py  0002_alter_currencyratesmodel_options.py  0002_alter_currencyratesmodel_rate.py  0003_delete_currenciesmodel.py  0004_alter_currencyratesmodel_base_currency_and_more.py
backend/backend/: settings.py  urls.py
backend/constants/: messages.py  routes.py
backend/utils/: currencies.py  misc.py
frontend/: .env.default  .eslintrc.cjs  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  Router.tsx
frontend/src/@types/: index.ts
frontend/src/components/Input/: index.tsx
frontend/src/components/Table/: index.tsx
frontend/src/constants/: index.ts  routes.ts  urls.ts
frontend/src/pages/: Default.tsx
frontend/src/pages/Home/: index.tsx
frontend/src/services/: api.ts
frontend/src/utils/: hooks.ts  index.ts
